19-综合实战-WordPress/manifests/lab03-ingress.yaml
# 第 3 层:入口(hosts 已加 127.0.0.1 wp.demo.local)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m    # WP 上传媒体文件放宽
spec:
  ingressClassName: nginx
  rules:
    - host: wp.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port: { number: 80 }
